Fixed dynamic footer on small devices

--- a/static/css/style.less
+++ b/static/css/style.less
@@ -317,11 +317,11 @@ footer {
     .fakeimg {
         background-image: url(../img/footer-border_slice.png);
         background-repeat: repeat-x;
-        width: 1100px;
         height: 29px;
         margin: 0 auto 31px;
         position: relative;
-        max-width: 100%;
+        border: 30px solid @brown;
+        border-width: 0 33px;  // fake border that adds a "padding" to the background image
 
         .bulb {
             position: absolute;
